fix jumping background (https://css-tricks.com/the-fixed-background-attachment-hack/)

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -24,7 +24,7 @@
     min-inline-size: 320px;
     margin: 0;
     padding: 0;
-    background: transparent var(--surface-color-background) no-repeat fixed 0 0 / 100lvi 100lvh;
+    background: transparent;
     color: var(--surface-color-foreground);
     font-family: var(--text-body-font-family);
     font-size: var(--text-body-font-size);
@@ -34,6 +34,15 @@
 
     @media (--theme-dark) {
       font-weight: 500;
+    }
+
+    &::before {
+      content: '';
+      position: fixed;
+      z-index: -1;
+      block-size: 100lvb;
+      inline-size: 100lvi;
+      background: var(--surface-color-background) no-repeat 0 0 / cover;
     }
   }
 
